--- a/data/projects/2-gotheatre.toml
+++ b/data/projects/2-gotheatre.toml
@@ -1,7 +1,7 @@
 title = "Go Théâtre"
-subtitle = "L'appli mobile de Théâtral magazine"
+subtitle = "Mobile application for Théâtral magazine"
 preview = "gotheatre.png"
 clientLink = "http://www.gotheatre.fr"
 tags = ["MeteorJS","Apache Cordova","iOS","Android","Go","semantic-ui"]
 #max 20 words
-description = "Développement full-stack d'une appli mobile iOS/Android + interface d'administration des contenus pour l'éditeur"
+description = "Full-stack mobile application for iOS & Android + admin interface for managing contents and stats"
