--- a/data/projects/3-segid.toml
+++ b/data/projects/3-segid.toml
@@ -1,7 +1,7 @@
 title = "Segid"
-subtitle = "Application web/mobile de gestion de la qualité"
+subtitle = "Quality management application (mobile & web)"
 preview = "segid.jpg"
 clientLink = "https://qualite.segid.fr"
 tags = ["MeteorJS","Go","mongoDB","css-bootstrap"]
 #max 20 words
-description = "Développement full-stack d'une web-app mobile + interface d'administration et tableau de bord qualité pour 400 chantiers"
+description = "Full-stack webapp + admin interface + dashboard for 400+ sites and 300+ clients"
