--- a/data/projects/5-LEA.toml
+++ b/data/projects/5-LEA.toml
@@ -1,7 +1,8 @@
 title = "L.E.A avocats"
 subtitle = "Site web du cabinet d'avocats, appli mobile et bases de décisions de justices"
+subtitle = "Website for the law firm, mobile application and a database for judicial decisions"
 preview = "lea.png"
 clientLink = "https://www.lea-avocats.com"
 tags = ["WordPress","mongoDB", "MeteorJS"]
 #max 20 words
-description = "Site institutionnel et d'édition d'actualités juridiques. Application mobile. Base de données des décisions de justice obtenues par le cabinet."
+description = "Corporate website and newsfeed. iOS & Android mobile application. Private database for judicial decisions in specialized areas."
