--- a/data/projects/6-applibibli.toml
+++ b/data/projects/6-applibibli.toml
@@ -1,7 +1,7 @@
 title = "AppliBibli"
-subtitle = "Appli de consultation des comptes des bibliothèques de la Ville de Paris"
+subtitle = "End users mobile application to check librairies accounts of Ville de Paris"
 preview = "applibibli.png"
 clientLink = "http://bibli.sapienssapide.com"
 tags = ["nodeJS","Apache Cordova", "Sencha touch"]
 #max 20 words
-description = "Application mobile iOS et Android qui s'est interfacée au SI existant sans modification de ce dernier."
+description = "iOS and Android application that connects to existing information system of Paris' librairies, without change on system."
