--- a/config.toml
+++ b/config.toml
@@ -28,7 +28,7 @@ theme = "agency-theme"
     # - send a dummy email yourself to confirm your account
     # - click the confirm link in the email from www.formspree.io
     # - you're done. Happy mailing!
-	email = "contact@sapienssapide.fr"
+	email = "contact@sapienssapide.com"
 
 
 	# Navigation
